fixes flickering, see http://stackoverflow.com/questions/10134935/weird-css3-transition-flickering for more info

--- a/scss/imports/custom.scss
+++ b/scss/imports/custom.scss
@@ -300,3 +300,10 @@ button.button-float {
 .item-toggle {
     pointer-events: initial; //This enables clickable lists with toggles
 }
+
+//fixes flickering on star-button...
+.button {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
